--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "start": "react-scripts start"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "react-scripts": "^1.0.17"
   }
 }
