--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
     "document": true
   },
   "rules": {
-    "react/destructuring-assignment": false
+    "react/destructuring-assignment": false,
+    "jsx-a11y/click-events-have-key-events": false,
+    "jsx-a11y/no-static-element-interactions": false
   }
 }
