--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   "rules": {
     "react/destructuring-assignment": false,
     "jsx-a11y/click-events-have-key-events": false,
-    "jsx-a11y/no-static-element-interactions": false
+    "jsx-a11y/no-static-element-interactions": false,
+    "react/no-array-index-key": false
   }
 }
